[package]
name = "newsletter"
version = "0.1.0"
authors = ["Faith Oyedemi <faithoyedemi@gmail.com>"]
edition = "2021"


[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


[dev-dependencies]
reqwest = "0.11"
